# sleep-scoring-reconciliation

./: .gitignore  DEBUG_flow_reconciliation.py  README.md  add_stage_numbers.py  annotations_staging.py  arousal_reconciliation.py  arousal_reconciliation_analysis.py  arousal_reconciliation_no_label.py  arousal_reconciliation_old.py  check_non_review_rows.py  combine_events.py  disagreement_analysis.py  environment.yml  event_reconciliation_analysis.py  find_disagreements.py  find_disagreements_simple_majority.py  flow_reconciliation.py  flow_reconciliation_analysis.py  flow_reconciliation_events.py  flow_reconciliation_no_labels.py  flow_reconciliation_overview.py  flow_reconciliation_v2.py  merge_staging_events.py  pyproject.toml  readme.md  visualise.py
data/staging_data/: AWV002.csv  AWV021.csv  AWV022.csv  AWV032.csv  AWV039.csv
output/disagreement/: AWV002_disagreements.csv  AWV021_disagreements.csv
output/disagreement_simple_majority/: AWV002_disagreements.csv  AWV021_disagreements.csv
src/: generate_final_output.py
src/analysis/: event_reconciliation_analysis.py
src/reconciliation/: arousal.py  flow.py  staging.py
src/utils/: analyze_reconciliation.py  combine_events.py  merge_staging_events.py  reconciled_data_cleaning.py
